Actions
Bug #6817
closedlibbe should not free string from nvlist_lookup_string()
Start date:
2016-03-25
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
needs-triage
Gerrit CR:
Description
small bug has slipped into be_do_installboot_helper() check for unavailable/offline disk is freeing disk path, which is originating from nvlist_lookup_string().
Updated by Electric Monk over 6 years ago
- Status changed from New to Closed
- % Done changed from 90 to 100
git commit e5b33823e7efd785e2f2ada4683abdef7c2a436c
commit e5b33823e7efd785e2f2ada4683abdef7c2a436c Author: Toomas Soome <tsoome@me.com> Date: 2016-03-25T19:52:53.000Z 6817 libbe should not free string from nvlist_lookup_string() Reviewed by: Josef 'Jeff' Sipek <jeffpc@josefsipek.net> Reviewed by: Yuri Pankov <yuri.pankov@nexenta.com> Reviewed by: Robert Mustacchi <rm@joyent.com> Reviewed by: Hans Rosenfeld <rosenfeld@grumpf.hope-2000.org> Approved by: Dan McDonald <danmcd@omniti.com>
Actions