6817 libbe should not free string from nvlist_lookup_string() Reviewed by: Josef 'Jeff' Sipek <jeffpc@josefsipek.net> Reviewed by: Yuri Pankov <yuri.pankov@nexenta.com> Reviewed by: Robert Mustacchi <rm@joyent.com> Reviewed by: Hans Rosenfeld <rosenfeld@grumpf.hope-2000.org> Approved by: Dan McDonald <danmcd@omniti.com>